--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "bin\\main.exe"
   cmd = "go build -o ./bin/main.exe ./src/cmd/app/main.go"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata" , "logs" , "bin"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata" , "logs" , "bin" , ".idea" ,".git"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
