--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-DSN=postgres://%s:%s@%s:%d/%s
-GIN_MODE=debug
+DSN=
+GIN_MODE=
+MIGRATION_PATH=src/internal/database/migrations/
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
+GOOGLE_LOGIN_URL=
+SOCIAL_LOGIN_SECRET_STATE=
+JWT_SECRET=
